<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout 

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/logo2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.forrmcadastro.Formcadastro">


    <TextView

        android:layout_width="match_parent"
        android:hint="@string/cadastro_do_usuário"
        android:gravity="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <EditText

        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email">

    </EditText>


    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:hint="@string/senha">

    </EditText>

    <Button
        android:id="@+id/butto_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salvar"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:padding="16dp"
        android:backgroundTint="@android:color/darker_gray"
        android:textSize="24sp">

    </Button>


</LinearLayout>


</androidx.core.widget.NestedScrollView>