<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela_Principal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/logo2"
        android:orientation="vertical"
        tools:context=".Tela_Principal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <View

                android:id="@+id/Circulo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/circulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="@id/Circulo"
                app:layout_constraintEnd_toEndOf="@id/Circulo"
                app:layout_constraintStart_toStartOf="@id/Circulo"
                app:layout_constraintTop_toTopOf="@id/Circulo" />


            <ImageView
                android:id="@+id/img_olho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_olho"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/Circulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/Circulo"
                app:layout_constraintTop_toTopOf="@id/Circulo" />


            <ImageView
                android:id="@+id/img_compart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_compartilhar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/Circulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.711"
                app:layout_constraintStart_toStartOf="@id/Circulo"
                app:layout_constraintTop_toTopOf="@id/Circulo" />

            <ImageView
                android:id="@+id/add_novo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_novo_usuario"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/Circulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.915"
                app:layout_constraintStart_toStartOf="@id/Circulo"
                app:layout_constraintTop_toTopOf="@id/Circulo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:text="@string/txt_nome_usuario"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Circulo"

                />


            <Button
                android:id="@+id/deslog"
                android:layout_width="94dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/sair"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cardCornerRadius="30dp"
                app:cardElevation="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.937"
                tools:ignore="TouchTargetSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txt_saldo_conta"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclePagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleProdutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>






        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/ic_cartao">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="2dp"
                    android:text="@string/cartoes"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold">


                </TextView>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ProgressBar>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
